// Copyright (c) 2015, Plume Design Inc. All rights reserved.
// 
// Redistribution and use in source and binary forms, with or without
// modification, are permitted provided that the following conditions are met:
//    1. Redistributions of source code must retain the above copyright
//       notice, this list of conditions and the following disclaimer.
//    2. Redistributions in binary form must reproduce the above copyright
//       notice, this list of conditions and the following disclaimer in the
//       documentation and/or other materials provided with the distribution.
//    3. Neither the name of the Plume Design Inc. nor the
//       names of its contributors may be used to endorse or promote products
//       derived from this software without specific prior written permission.
// 
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
// ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
// WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
// DISCLAIMED. IN NO EVENT SHALL Plume Design Inc. BE LIABLE FOR ANY
// DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
// (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
// LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
// ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
// SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

syntax = "proto2";

message nflog
{
    // Serial number of the device reporting the stats
    optional string node_id = 1;
    // Location id of the device reporting the stats
    optional string location_id = 2;
    // Packet timestamp: Unix time in seconds
    optional double timestamp = 3;
    // Hardware address
    optional string hw_addr = 4;
    // Firewall mark
    optional uint32 fw_mark = 5;
    // Ingress interface name
    optional string ingress_ifname = 6;
    // Egress interface name
    optional string egress_ifname = 7;
    // Ingress physical interface name
    optional string ingress_phyifname = 8;
    // Egress physical interface name
    optional string egress_phyifname = 9;
    // iptables rule prefix
    optional string prefix = 10;
    // Socket group ID (NOT the user group id)
    optional int32 nl_group_id = 11;
    // Packet data
    optional bytes payload = 12;
    // Hardware header type
    optional uint32 hwtype = 13;
    // Hardware header length
    optional uint32 hwlen = 14;
    // Hawrdware header data
    optional bytes hwheader = 15;
}
